Closed
Bug 850043
Opened 12 years ago
Closed 9 years ago
Firefox takes two backspace key strokes to delete one IVS character
Categories
(Core :: DOM: Editor, defect)
Tracking
()
RESOLVED
FIXED
mozilla52
| Tracking | Status | |
|---|---|---|
| firefox52 | --- | fixed |
People
(Reporter: mr.yezhang, Unassigned)
References
Details
Attachments
(3 files)
User Agent: Mozilla/5.0 (compatible; MSIE 9.0; Windows NT 6.1; WOW64; Trident/5.0; SLCC2; .NET CLR 2.0.50727; .NET CLR 3.5.30729; .NET CLR 3.0.30729; Media Center PC 6.0; .NET4.0C; Zune 4.7; MS-RTC LM 8; .NET4.0E; InfoPath.3)
Steps to reproduce:
1. Log on GMail (or any web mail)
2. New mail
3. Copy paste 辻
| Reporter | ||
Updated•12 years ago
|
OS: Windows 7 → Windows 8
Comment 1•12 years ago
|
||
I cannot reproduce this except to gmail. I works fine when using contentediatble/editbox.
mr.yezhang, could you reproduce this except to gmail?
Version: 1.9.2 Branch → Trunk
Comment 2•9 years ago
|
||
OK. If using <textarea>, I can reproduce this on Nightly 52.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Comment 3•9 years ago
|
||
| Comment hidden (mozreview-request) |
| Comment hidden (mozreview-request) |
Comment 6•9 years ago
|
||
When typing character, current selection node might be anonymous DIV, not text node. So even if plain text, we might not get it. We should get text node correctly when using plain text editor.
| Comment hidden (mozreview-request) |
| Comment hidden (mozreview-request) |
Comment 9•9 years ago
|
||
| mozreview-review | ||
Comment on attachment 8801620 [details]
Bug 850043 - Part 1. Looking for better insertion point when using plain text editor.
https://reviewboard.mozilla.org/r/86288/#review84968
Attachment #8801620 -
Flags: review?(masayuki) → review+
Comment 10•9 years ago
|
||
| mozreview-review | ||
Comment on attachment 8801621 [details]
Bug 850043 - Part 2. Add test.
https://reviewboard.mozilla.org/r/86290/#review84970
::: editor/libeditor/tests/test_bug850043.html:18
(Diff revision 2)
> +</head>
> +
> +<body>
> +<a target="_blank" href="https://bugzilla.mozilla.org/show_bug.cgi?id=850043">Mozilla Bug 850043</a>
> +<div id="display">
> +<textarea id="textarea">b邀󠄏辺󠄁</textarea>
I'd like you to add <div contenteditable>b邀󠄏辺󠄁</div> at below the <textarea> element and run same test.
Attachment #8801621 -
Flags: review?(masayuki) → review+
Comment 11•9 years ago
|
||
Pushed by m_kato@ga2.so-net.ne.jp:
https://hg.mozilla.org/integration/mozilla-inbound/rev/bfa9c87b69e6
Part 1. Looking for better insertion point when using plain text editor. r=masayuki
https://hg.mozilla.org/integration/mozilla-inbound/rev/82626681f49c
Part 2. Add test. r=masayuki
Comment 12•9 years ago
|
||
| bugherder | ||
https://hg.mozilla.org/mozilla-central/rev/bfa9c87b69e6
https://hg.mozilla.org/mozilla-central/rev/82626681f49c
Status: NEW → RESOLVED
Closed: 9 years ago
status-firefox52:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla52
You need to log in
before you can comment on or make changes to this bug.
Description
•