Bug 850043 - Part 1. Looking for better insertion point when using plain text editor. r=masayuki

When typing character, current selection node might be anonymous DIV, not text node.  So even if plain text, we might not get it.

We should get text node correctly when using plain text editor.

MozReview-Commit-ID: LmfYa7BqZnC